# MobileFluidSimulation

./: README.md
mytest/: build.gradle  settings.gradle
mytest/app/: build.gradle
mytest/app/src/main/: AndroidManifest.xml
mytest/app/src/main/cpp/: CMakeLists.txt  android_main.cpp  renderer.cpp  renderer.h  renderer_types.h  test.txt
mytest/app/src/main/java/com/example/mytest/: MainActivity.java
mytest/gradle/: libs.versions.toml
mytest/gradle/wrapper/: gradle-wrapper.properties
